Update ios project to read property maxSize. Now the image will be reduced to the maxSize (if set to value > 0).

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ local.properties
 #
 node_modules/
 npm-debug.log
+
+android/.settings
+.project
+org.eclipse.buildship.core.prefs
+Example/android/app/.classpath
