--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-native-signature-capture",
-  "version": "0.4.9",
-  "description": "Lets users sign their signatures",
+  "name": "@alanlima/react-native-signature-capture",
+  "version": "0.5.0",
+  "description": "Fork of the original library from RepairShopr.",
   "main": "SignatureCapture.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RepairShopr/react-native-signature-capture.git"
+    "url": "git+https://github.com/alanlima/react-native-signature-capture.git"
   },
   "keywords": [
     "react-component",
@@ -23,9 +23,9 @@
   "author": "RepairShopr",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/RepairShopr/react-native-signature-capture/issues"
+    "url": "https://github.com/alanlima/react-native-signature-capture/issues"
   },
-  "homepage": "https://github.com/RepairShopr/react-native-signature-capture#readme",
+  "homepage": "https://github.com/alanlima/react-native-signature-capture#readme",
   "dependencies": {
     "prop-types": "^15.5.10"
   },
